fixed background image to prevent scrolling from causing white space

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,7 @@ body{
     background-size:2000px;
     background-repeat: no-repeat;
     background-position-x:center;
+    background-attachment: fixed;
 }
 
 #box1{
@@ -40,6 +41,11 @@ body{
 .charMap{
     width: 30%;
 }
+
+/* .searchbtn, .txtbox {
+    float: left;
+    display: block;
+} */
 
 @media screen and (max-width: 600px){
     .charMap {
